<resources>
    
    <string name="app_name">Prueba WebServices</string>
    
    <!-- Fragment Menu principal -->
    <string name="txtFragmentMenuPrincipal">App donde pruebo los webservices para ver si alguno es util para usarlo
        en alguna de mis Apps</string>
    <string name="txtOpcionWSPersonas">WebServices Personas</string>
    <string name="txtOpcionWSConsultarIP">WebServices Datos IP</string>
    <string name="txtOpcionWSConsultarCP">WebServices Hora Mundial</string>
    <string name="txtOpcionWSConsultarMoneda">WebServices Moneda</string>
    <string name="txtOpcionWSExchange">WebServices Exchange</string>
    <string name="txtOpcionWSConsultarIP2">WebServices Datos IP 2</string>

    <!-- Fragment WebServices Personas -->
    <string name="titFragmentWSPersonas">WebService Personas</string>
    <string name="txtFragmentWSPersonas">Web Services que genera de foma aleatoria datos de contacto de personas
        (Nombre, apellidos, pais, email, foto...etc)</string>
    <string name="errorConexionWS">Error Conexion WS</string>

    <!-- Fragment Zoom Imagen -->
    <string name="titFragemntZoomImagen">Zoom</string>

    <!-- Fragment Detalles Persona -->
    <string name="titFragmentDetalles">Detalles Persona</string>

    <!-- Fragment Consultar IP -->
    <string name="titFragmentConsultarIP">Consultar IP</string>
    <string name="hintIP">Insertar IP</string>
    <string name="txtBotonConsultarIP">Consultar IP</string>
    <string name="txtErrorConsultaWS">Error WS: Se ha producido un Error en la Consulta WS</string>
    <string name="txtErrorInsertarIP">Debes introducir una direccion IP</string>

    <!-- Fragment Detalles IP -->
    <string name="titFragmentDetallesIP">Datos IP</string>
    <string name="titCity">City:</string>
    <string name="titRegion">Region:</string>
    <string name="titCountry">Country:</string>
    <string name="titLat">Latitude:</string>
    <string name="titLng">Longitude:</string>

    <!-- Fragment Consultar Hora Mundial -->
    <string name="titFragmentConsultarHoraMundial">Consultar Hora</string>
    <string name="titInsertarDatos">Insertar Datos</string>
    <string name="hintLocalidad">Localidad</string>
    <string name="hintPais">Pais</string>
    <string name="txtBtnConsultarHora">Consultar Hora</string>
    <string name="txtErrorInsertarDatos">Se deben insertar todos los datos</string>
    <string name="txtNoExisteLocalidad">Error, Localidad no Encontrada</string>
    <string name="txtExceptionGeocoder">Exception, Localidad no Encontrada</string>
    <string name="txtErrorLocalidadWS">Error WS, Localidad no Encontrada</string>

    <!-- Fragment Detalles Hora -->
    <string name="titFragmentDetallesHora">Hora Actual</string>
    <string name="titDate">Date:</string>
    <string name="titTimeZone">Time Zone:</string>
    <string name="titTimeZoneLocation">Time Zone Location:</string>
    <string name="titGmtOffset">GMT Offset:</string>
    <string name="titLocation">Location:</string>

    <!-- Fragment Conversor Moneda -->
    <string name="titFragmentConversorMoneda">Conversor Moneda</string>
    <string name="titInsertarDatosMoneda">Insertar Datos</string>
    <string name="titInsertarCantidadMoneda">Insertar Cantidad</string>
    <string name="btnConversion">Conversion</string>
    <string name="txtErrorSeleccMonedas">Debes Seleccionar la Moneda de Origen y Destino del cambio</string>
    <string name="txtErrorCantidadMoneda">Debes insertar la cantidad a convertir</string>

    <!-- Fragment Detalles Conversor Moneda -->
    <string name="titFragmentDetallesConversorMoneda">Conversión Moneda</string>
    <string name="titResultadoConversion">Resultado Conversion</string>

    <!-- Fragment Exchange Moneda -->
    <string name="titFragmentExchange">Exchange Moneda</string>
    <string name="titConsultarExchange">Consultar Exchange</string>
    <string name="titInfoExchange">Selecciona las divisas para calcular cambio</string>
    <string name="txtErrorseleccionMoneda">Error, seleccionada la misma moneda en ambos spinners</string>
    <string name="txtErrorExchange">No se ha podido obtener cambio para la moneda solicitada</string>
    <string name="btnExchange">Exchange</string>

    <!-- Fragment Consultar IP 2-->
    <string name="titFragmentConsultarIP_2">Consultar IP 2</string>
    <string name="txtNoDatosConsultaIP">No se han podido obtener de la direccion IP indicada</string>
    <string name="titDetallesIP">Datos IP</string>
    <string name="titPais">Pais:</string>
    <string name="titCiudad">Ciudad:</string>
    <string name="titCP">Código Postal:</string>
    <string name="titLatitud">Latitud:</string>
    <string name="titLongitud">Longitud:</string>
    <string name="titProveedorInternet">Proveedor Internet:</string>

</resources>