<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/aldrich"
        android:gravity="center"
        android:text="@string/txtFragmentMenuPrincipal"
        android:textStyle="bold" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="30dp"
        app:strokeColor="@color/indigo_500"
        app:strokeWidth="1dp"
        app:shapeAppearance="@style/cardViewBordeRecortados">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtOpcionWSPersonas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/txtOpcionWSPersonas"
                android:textSize="22sp"
                android:fontFamily="@font/aldrich"
                android:textStyle="bold"
                android:clickable="true"
                android:textColor="@color/color_texto"/>

            <TextView
                android:id="@+id/txtOpcionWSConsultarIP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/txtOpcionWSConsultarIP"
                android:textSize="22sp"
                android:fontFamily="@font/aldrich"
                android:textStyle="bold"
                android:clickable="true"
                android:textColor="@color/color_texto"/>

            <TextView
                android:id="@+id/txtOpcionWSConsultarHora"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/txtOpcionWSConsultarCP"
                android:textSize="22sp"
                android:fontFamily="@font/aldrich"
                android:textStyle="bold"
                android:clickable="true"
                android:textColor="@color/color_texto"/>


            <TextView
                android:id="@+id/txtOpcionWSConsultarMoneda"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="40dp"
                android:text="@string/txtOpcionWSConsultarMoneda"
                android:textSize="22sp"
                android:fontFamily="@font/aldrich"
                android:textStyle="bold"
                android:clickable="true"
                android:textColor="@color/color_texto"/>


            <TextView
                android:id="@+id/txtOpcionWSExchange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="40dp"
                android:text="@string/txtOpcionWSExchange"
                android:textSize="22sp"
                android:fontFamily="@font/aldrich"
                android:textStyle="bold"
                android:clickable="true"
                android:textColor="@color/color_texto"/>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>