<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:shapeAppearance="@style/cardViewBordeRecortados"
        app:strokeColor="@color/indigo_700">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/aldrich"
                android:textColor="@color/indigo_700"
                android:textStyle="bold"
                android:textSize="22sp"
                android:text="@string/titInsertarDatos"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/indigo_700"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:hint="@string/hintLocalidad">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextLocalidad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:hint="@string/hintPais">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextPais"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnConexionWS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:layout_marginBottom="20dp"
                android:layout_gravity="center"
                android:text="@string/txtBtnConsultarHora"
                app:shapeAppearance="@style/botonBordeRecortados"/>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>


</LinearLayout>